
*lh-sources-3.19.5 (22 Apr 2015)

  22 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.5.ebuild,
  -lh-sources-3.19.4.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release

*lh-sources-3.19.4 (14 Apr 2015)

  14 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.4.ebuild,
  -lh-sources-3.19.3.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release; drop
  old

  29 Mar 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.19.3.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs3

*lh-sources-3.19.3 (27 Mar 2015)

  27 Mar 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.3.ebuild,
  -lh-sources-3.19.2.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release;
  update gcc opt patch

  23 Mar 2015; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.7.ebuild,
  -lh-sources-3.19.0.ebuild, -lh-sources-3.19.1.ebuild,
  lh-sources-3.19.2.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs and drop old

*lh-sources-3.19.2 (19 Mar 2015)

  19 Mar 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.2.ebuild:
  sys-kernel/lh-sources: Bump to latest genpatches and linux release

*lh-sources-3.19.1 (09 Mar 2015)

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.1.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs3, genpatches and linux release

  23 Feb 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.19.0.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs3 release

*lh-sources-3.19.0 (17 Feb 2015)

  17 Feb 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.0.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs3, genpatches and linux release

*lh-sources-3.18.7 (12 Feb 2015)

  12 Feb 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.18.7.ebuild,
  -lh-sources-3.18.4.ebuild, -lh-sources-3.18.6.ebuild:
  sys-kernel/lh-sources: Bump to latest genpatches and linux release

  10 Feb 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.6.ebuild: