@@ -1,12 +1,12 @@
-DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r7-3.19.patch1 3339 SHA256 fac4a507a7a16948a0069be784624f87effeb0b7992507104c7db81c190c93e2 SHA512 a4f9b4cc5ac85d3bf9b8a3420fd550bf1361d24f1314953d7c073f07a4d008ee5bfcadafba28bd57aa7228857392c131af12a0804da256bc98cfd9462112051e WHIRLPOOL 1c962d7d9b82c26d88b59106dfafa2fe9034133cb50baad6b14f072f17fdd59ba47fe9e074c88daf2a8466eabce7d22eba7ee2450506df93f7bee928d8427157
-DIST 0002-block-introduce-the-BFQ-v7r7-I-O-sched-for-3.19.patch1 224820 SHA256 621d4877d992f353ec6d9f977377552077aeebe85c47e65716e99d699af5cb11 SHA512 04cd37e2043c32e27406720a12212227fd307c67024e27127386e9c6f20e8fdd04c1a423b334cc41868dac935de0c8e59ef2220bddbb4b1e47f4e6c115bf0091 WHIRLPOOL 07b547aae8cbf61324837b9bab1c6829d6c478210f67a751cd10fd1bd0ba77a4210fcc5bad3dec8f4ea71714a4a87446003d354bc07b1bb8208d1ac24bfbe335
-DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r7-for-3.19.0.patch1 42435 SHA256 1509740239a2f5b623bc05b3b9efbfd4e2fa75029503e0770a274f7e7c59d79f SHA512 5298979067a41dc6506a08664ef70fc3d9ef5155a1ac6a7cc65e050282498d3451aa3077028c05d97e9467ee7d083ce45606ab2582558a26a2cc95c8b6cbfa81 WHIRLPOOL f8e1b324dfb05cf50d258b5739e21e29977656aabcdb22dd4817044d5ac7a146d2bd00226e5b37d3189f2b9d889f549ba4b8bef89088f8b883da1cb160c89854
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r7-4.0.patch1 3340 SHA256 ff13786f79587cfc7016f0d287b82cfd79d21d00082e7fc0c954582e26c7243e SHA512 f81297a1547ab96b8394123fc7aa2c7b21f1a44ad3a535f5e715bf593fba9c79bb16fc091498936e8b4e4bdf041f75c340002b9763f0b35f1207912d703ba566 WHIRLPOOL 2d8dfe8b3fd0e847ae29af01a531e27b00947d36886406f5342d8fdc90697e0698465367744cfc718269185114400b8fa3fa80be470e518b5b1ca1f2b3fca73e
+DIST 0002-block-introduce-the-BFQ-v7r7-I-O-sched-for-4.0.patch1 224817 SHA256 940a0aa5b790f06e9b15ad9fc91b8cecc6e7f4bdbdbcc584fd1508d9d431c5ea SHA512 dafeaaea16168d445bdc1dcd1a97958b55f8dc79c61021e02c3fbf1ae7d4eae5aed2f565d6f2bf56c652803508d62f6f40765b3b831277d817bbe0a40aa5202d WHIRLPOOL 12ae0f75e0a9f983159d889bb66f8f9639c36a8393e32acb5ecc16740fea49b1fd50a15d5176deb45430f12251adae6818b29b7805e94d239d83cf1e9a2457bc
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r7-for-4.0.0.patch1 42434 SHA256 e8b5df967de0e91bfbec7a8acd39e8967ea51e090090c5d7888b408d16cce6bb SHA512 c4f5a82ca4c87d21768351e17fcefb61d238394baf4475934d3c384e9990d86af14631234a8dffc363d95abc34438edfe06f8a7e9c36a320062bf3270a2466e8 WHIRLPOOL 98215ed26ef62b7caa3d728468be96e3c5da61ff105a5d49c2ebda47c52b6594bdfd091355be00c9fe0bdd75b98d4969710136168380529ad30f005bb9e33b45
 DIST README-v7r7-0.BFQ 21937 SHA256 d53e830875c98294b14311d19422e0fa039658eff2261ffa71d678c578b7fe81 SHA512 639d69e73eace76ed2415ce040f66bbf16fce3acf274409c35b434d0baaed42b80fec84226e345c162f0b5825986787f99895291b9fdac54eb6245f57be84f9c WHIRLPOOL 530fd3cbb16903ba7e64d674579713d3e6c17a98c051ffa0b9dd63bb2f3da82f7d574d24ce28ab79252e750418caf41c6951cf8961ac0b10ce39729df47813aa
-DIST aufs-sources-3.19_p20150420.tar.xz 164156 SHA256 a657ec22cb8686f17dc680119180dddec8253d4752f79d750d5758c6f6a64319 SHA512 b417a8e0d32c9f2a81f202f41ff3dab1310678ce50dd349390a94c89d74279eb2e255fccc27e50429ff4a12da14a0d1fe7bad3e5cc83d70be98c9f49c5e567ec WHIRLPOOL 7d585c16a63dde65760694d42058f30d96bd182152473b96b493253601ba44d52af302dabf54327ea90215d32866c3caf3c0396cddcf23bf87bc76d1ed6bc871
-DIST deblob-3.19 129098 SHA256 b0e121e80f02676bc023df1470691b94bd0495ae09aa349d1e6edddf7d1b34a2 SHA512 8f9327d5bb56fbc24f72622d579232003db95695c0cd22b4ce0b4692c9757b639c1253548d943f7cbdde9652cf51814f4b4fdf92055e8ae1c9d75acdc68d9a32 WHIRLPOOL bc3ed9eeec3ab77e2f18ec4a2a536a58b4bf2091a50219220c4d1d21de6956709c97dbb098eba64eacb2fac45f410020f6c37a3f890e6e820d5d8faebc3f3b3c
-DIST deblob-check-3.19 659945 SHA256 df5a9b11b095b0d8c3204c9b24118d77689900fc4ef4c3256b13fe86aee0d185 SHA512 f7fc86ebc8e1c61c16d7ce6831368832862346522676b65f4702c77bb2e9b08691f2c67cf88e92929908d5300d53913e7e5365baf3378b1cbe3aca59ec80c672 WHIRLPOOL e5e33da007c07af4ca5713d583f992d9da8c6745761e1956a246de429a44aa972a94cc1db51e67d0ba1aad9b8476ef694d846e8157a85411bcbc1809f20f633a
-DIST genpatches-3.19-6.base.tar.xz 197728 SHA256 9fc2f0107f8da2de425feabe55b5c36f83f344cd6b6b30b28e2e7bff605dd471 SHA512 f5ae807fec88d2b7d1f21c92003a6cae3ff8c43931428877a3f74f636b248f2ffd3d7c630701584eff85bdc925b24bf292f5a2427967fabf844293101b649488 WHIRLPOOL 51a33d577e0ab0c27078bf2d50cf5ebdec700743b66568d83011e29558525cdf80e9a05d3024f893577b5be67e1203aea7ed1890c9bc30bc552c51917e9e3974
-DIST genpatches-3.19-6.extras.tar.xz 16276 SHA256 2f532ba1bbfe0f58b9578cf95526227cdd12b9fcb4cb4a74fcd700e100d8dcdf SHA512 67ad3c56f0d86bc77cf6a9e724f2e3a4b9e599dc52ab7ef8ed84df9abcd3c8efa96af82c2739b3efefb584d16b21178254a197f67967099acb59c0f2446acab3 WHIRLPOOL d1e20b4cb4c9468ffac784d0a483fc6d14bb39a74129f54a09282d661047549857c0bbc5c252d10d750ff51d41796a963aa38fdf9b07ed2f001b5dc444d9b2f5
+DIST aufs-sources-4.0_p20150420.tar.xz 163072 SHA256 a8deaea88d87c9b4597372b1422910233af8f8330dfff82d447bcc796cc0d05b SHA512 86a3d5d1cef63075aa068878edfc0f8189a7c43c566b6ae09a4e0bc6aeb80be99d93c21b4629de14e9b762b447dc387e1ec1c691a9b826adcd25e795d7ad6432 WHIRLPOOL adcde1c153861cb6a8f83f7be2121f4d5b48cd235a17092d8041765f2912d21db7fb09a9b67a30cacc12ae888273070d24f697ab7c2a41e32a4b1b5afa7bc2ba
+DIST deblob-4.0 129952 SHA256 c3d8e9a9728d5c1fc11b1112f5343b14e46a8cf2880e10399a840bc94b6e2ad3 SHA512 055205394487dbc0022f9531fb76d0be51ca3ec4e119232cc0972790d1532c680e1367eb36a9f40529f0ab1d76f64240b1e8a07cb02d3605d594c06e3547f1bb WHIRLPOOL db32b66231e552ac6e3651152eb2b3212ef0863842cd352bd2f1b1080b9ea5543f1f7ed0e7958a9f4b115559233dc1817560e896c789378ea7b68b527b721ca8
+DIST deblob-check-4.0 670921 SHA256 042b511913187672d9a0512765e662ba5d4283812ebebf424f778eb08fa359bc SHA512 a27e3530cd3028041445cf8c5f49ad7827a7cf2b511de28851d2b09c28347cf2be667a7494bd698939c007fb77595699c1f61fb76249ae87658e1d12e855d2a1 WHIRLPOOL 953d8e6eed10971ed67a4573449b9a536ad693a2130153a6fc7cc9ea3e2daea21ca002c8df80126f7e318f75bec82c3f6e99fe43155817e2e2a52b5949dc5d2d
+DIST genpatches-4.0-1.base.tar.xz 3720 SHA256 e1abe1fdf42dda7e0e5aef9843bc5d240416c6fbde8dcca44e2a43b5e5f6c2f1 SHA512 3d67dba40ff8501d258e9a30996d70be5e614661f76fd4978c5837f16b42f1ac9015010e7b6a9826ed20c0723547d19ffafd54dcface2a41b0a95d23aa72dcbb WHIRLPOOL 791a508360e23160a7ba9dbc3f6c311727cb638693fa63354e60a847aa0bed7ea6c2d8b0e2605d1cfdcc77101caab9c0b8886a5fe71effa03dbe47895f44e3bd
+DIST genpatches-4.0-1.extras.tar.xz 16276 SHA256 1fc718e10dfdfedbaeb896c60c5cfe95c7d1fe4af23de8596a467c309ddcb18a SHA512 7a866aadf905cd463a527e517021bc5060045f7c3b9fb82d0031b399fbd8d9b69db15547ec8ee6eb9e9fd81ca6613a1fe9d2cfed74f474884f42e15eafc8b487 WHIRLPOOL 2c2eeb44761bfb01de861acd58df12bdf5ad339eeec825cd0b9669f5287bc73e38cfbcc6aa904ae222b68514fe736aa33ffe5db2c3dab75dedc93493600caa17
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-aab465c93f3c91adf5a2560d84580db662f9fa1c.patch 16963 SHA256 ca7e13dc12f16418397e2d855a66f08605a4aeaf229624d25f1e5a564db60165 SHA512 5f19e1dd032f78dd2bf479e96c65167044e9c78955849f90d8586fb3f1e5dc7b645129c8748ea8ffa116a653d0683876b4533a1c23e0a1015b44067c007e788a WHIRLPOOL c1479f3a4b3170fc1e00bc2b9678278ae6757c0ef3743ce161aa462efb070786464702d53016c540d5bf3dc48710e3dbe2516a2b7a10c6c3e6f177156c6d80e2
-DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
+DIST linux-4.0.tar.xz 82313052 SHA256 0f2f7d44979bc8f71c4fc5d3308c03499c26a824dd311fdf6eef4dee0d7d5991 SHA512 ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f130c59177a2fe4793b7dc399481bf10d3556d1d571616000f180304e5a995 WHIRLPOOL c481256e23dc82209942d4f2fc9a94aa7fc4c3c69b05eaa041a58ca4bdc5781274ec4c49d597ccf94b634d61418ec578d20a6569c6c7052b4d3cf33611c99001
