@@ -6,7 +6,7 @@ EAPI=5
 
 ETYPE="sources"
 K_WANT_GENPATCHES="base extras"
-K_GENPATCHES_VER="6"
+K_GENPATCHES_VER="1"
 K_DEBLOB_AVAILABLE="1"
 UNIPATCH_STRICTORDER=1
 inherit kernel-2 readme.gentoo versionator
@@ -15,7 +15,7 @@ detect_arch
 
 KMAIN_VER=$(get_version_component_range 1-2)
 
-AUFS_VERSION=3.19_p20150420
+AUFS_VERSION=4.0_p20150420
 AUFS_TARBALL="aufs-sources-${AUFS_VERSION}.tar.xz"
 # git archive -v --remote=git://git.code.sf.net/p/aufs/aufs3-standalone aufs3.8 > aufs-sources-${AUFS_VERSION}.tar
 AUFS_URI="http://dev.gentoo.org/~jlec/distfiles/${AUFS_TARBALL}"
@@ -27,7 +27,7 @@ BFQ=true
 
 BFQ_URI_PATCH_MINOR="0"
 BFQ_URI_PATCH_LEVEL="7r7"
-BFQ_BASE="http://www.algogroup.unimo.it/people/paolo/disk_sched/patches/${KMAIN_VER}.${BFQ_URI_PATCH_MINOR}-v${BFQ_URI_PATCH_LEVEL}"
+BFQ_BASE="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/${KMAIN_VER}.${BFQ_URI_PATCH_MINOR}-v${BFQ_URI_PATCH_LEVEL}"
 BFQ_URI="
 	${BFQ_BASE}/0001-block-cgroups-kconfig-build-bits-for-BFQ-v${BFQ_URI_PATCH_LEVEL}-${KMAIN_VER}.patch -> \
 		0001-block-cgroups-kconfig-build-bits-for-BFQ-v${BFQ_URI_PATCH_LEVEL}-${KMAIN_VER}.patch1
@@ -57,7 +57,7 @@ SRC_URI="
 "
 
 if [[ ${BFQ} == "true" ]]; then
-	HOMEPAGE+=" http://www.algogroup.unimo.it/people/paolo/disk_sched"
+	HOMEPAGE+=" http://algo.ing.unimo.it/people/paolo/disk_sched/"
 	SRC_URI+=" ${BFQ_URI}"
 fi
 
@@ -65,7 +65,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="deblob module vanilla"
 README_GENTOO_SUFFIX="-r1"
 
-PDEPEND=">=sys-fs/aufs-util-3.7"
+PDEPEND="=sys-fs/aufs-util-4*"
 
 AUFS_PATCH_LIST="
 	"${WORKDIR}"/aufs3-kbuild.patch
