@@ -1,4 +1,11 @@
 
+*lh-sources-4.0.0 (22 Apr 2015)
+
+  22 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.0.ebuild,
+  -lh-sources-3.19.5.ebuild:
+  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release; fix
+  aufs-util version
+
 *lh-sources-3.19.5 (22 Apr 2015)
 
   22 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.5.ebuild,
